# mconf-aggr

./: .env  .flake8  .gitignore  .version  Changelog.md  Dockerfile  Dockerfile.base  Dockerfile.debug  Dockerfile.dev  Dockerfile.development  Dockerfile.dockerize  Dockerfile.dockerize.webhook  Dockerfile.dockerize.zabbix  Dockerfile.production  Dockerfile.webhook  Dockerfile.zabbix  Makefile  README.md  debug.yml  development.yml  docker-compose.yml  evt_lst_main.py  gunicorn_config.py  kafka.yml  main.py  main_db.py  main_event_listener.py  main_webhook.py  main_zabbix.py  production.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_webhook.txt  requirements_zabbix.txt  setup.py  start.sh  tests.py
Webhook test/: README.md  correct_sequence.sh  correct_sequence_recording.sh  meeting_created.py  meeting_ended.py  meeting_recording_changed.py  post_event.py  rap_archive_ended.py  rap_archive_started.py  rap_post_publish_ended.py  rap_post_publish_started.py  rap_process_ended.py  rap_process_ended_pv.py  rap_process_started.py  rap_process_started_pv.py  rap_publish_ended.py  rap_publish_ended_pv.py  rap_publish_ended_rec.py  rap_publish_ended_rec_pv.py  rap_publish_started.py  rap_publish_started_pv.py  rap_sanity_ended.py  rap_sanity_started.py  user_audio_voice_enabled.py  user_joined.py  user_presenter_assigned.py  user_presenter_unassigned.py
config/: config.json  config.json.tmpl  config_webhook.json.tmpl  config_zabbix.json.tmpl  default.json  logging.json  tests.json
doc/: conf.py  index.rst  make.bat
dockerize/: Dockerfile.alpine.dockerize  Dockerfile.python3.dockerize  Makefile
docs/: Makefile  api.rst  architecture.rst  conf.py  events.md  index.rst  mconf_aggr.rst
envs/: webhook-env-file.env  zabbix-env-file.env
hooks/: build
kafka/: consumer.py  producer.py  producer_recording.py
mconf_aggr/: DBMapping.py  Meetings.py  aggregator.py  (+9 more)
(+82 files in other folders)
