[build-system]
requires = ["poetry-core~=1.1.13"]
build-backend = "poetry.core.masonry.api"

#
# Poetry
#

[tool.poetry]
name = "mconf-aggr"
version = "1.9.2"
description = "Mconf Aggregator"
authors = ["Kazuki Yokoyama <kmyokoyama@inf.ufrgs.br>"]

[tool.poetry.dependencies]
python = "3.9.10"
falcon = "^3.0.1"
gevent = "^21.12.0"
gunicorn = "^20.1.0"
logaugment = "^0.1.3"
psycopg2-binary = "^2.9.3"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"
urllib3 = "^1.26.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
debugpy = "^1.6.0"
flake8 = "^4.0.1"
isort = "^5.10.0"

#
# Tools
#

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
