[project]
name = "mconf-aggr"
version = "1.9.2"
description = "Mconf Aggregator"
dependencies = [
    "falcon<4.0.0,>=3.0.1",
    "gevent<22.0.0,>=21.12.0",
    "gunicorn<21.0.0,>=20.1.0",
    "logaugment<1.0.0,>=0.1.3",
    "psycopg2-binary<3.0.0,>=2.9.3",
    "requests<3.0.0,>=2.27.1",
    "SQLAlchemy<2.0.0,>=1.4.31",
    "urllib3<2.0.0,>=1.26.5",
    "loguru<1.0.0,>=0.7.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
tests.cmd = "python tests.py"
tests.env_file = "./envs/webhook-env-file.env"

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "coverage~=6.5",
    "black~=22.12",
    "flake8~=6.0",
    "isort~=5.10",
]
test = [
    "pytest>=7.4.0",
]
debug = [
    "debugpy>=1.6.7",
]

[tool]
[tool.pytest.ini_options]
addopts = "-ra -v -x -s --import-mode=importlib"
testpaths = ["tests"]
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
[tool.isort]
profile = "black"
